conncct js scripts

--- a/index.html
+++ b/index.html
@@ -1,1 +1,6 @@
-<!DOCTYPE html><html><head><title>Homework</title></head><body></body></html>
+<!DOCTYPE html><html><head><title>Homework</title></head><body>
+	
+    <script src="./js/task-1.js"></script>
+    <script src="./js/task-2.js"></script>
+    <script src="./js/task-3.js"></script>
+</body></html>
